syntax = "proto3";

package distkv;
option go_package = "github.com/jainyk/distkv/proto";

service KVStore {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  string value = 2;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
}

service NodeCommunication {
  rpc JoinCluster(JoinRequest) returns (JoinResponse) {}
  rpc LeaveCluster(LeaveRequest) returns (LeaveResponse) {}
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
  rpc ReplicateData(ReplicateRequest) returns (ReplicateResponse) {}
}

message JoinRequest {
  string node_id = 1;
  string address = 2;
}

message JoinResponse {
  bool accepted = 1;
  repeated string cluster_nodes = 2;
}

message LeaveRequest {
  string node_id = 1;
}

message LeaveResponse {
  bool acknowledged = 1;
}

message HeartbeatRequest {
  string node_id = 1;
  int64 timestamp = 2;
}

message HeartbeatResponse {
  bool acknowledged = 1;
}

message ReplicateRequest {
  string key = 1;
  string value = 2;
  string operation = 3; // PUT or DELETE
}

message ReplicateResponse {
  bool success = 1;
}